--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <!-- --x-- custom script --x-- -->
 
     <!-- ----- inline script ----- -->
-    <script>
+    <!-- <script>
         const items = document.querySelectorAll(".data");
 
         gsap.from(items, {
@@ -255,7 +255,7 @@
             snap: { textContent: 1 }
             // onUpdate: textContent.replace(/\B(?=(\d{3})+(?!\d))/g, ","),
         });
-    </script>
+    </script> -->
     <!-- --x-- inline script --x-- -->
 
 </body>
