--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- -x- carousel -x- -->
 
         <!-- ----- counter ----- -->
-        <div class="container-fluid">
+        <!-- <div class="container-fluid">
             <div class="row counter-row">
                 <div class="col-md-3 counter">
                     <i class="fa-solid fa-users"></i>
@@ -208,11 +208,117 @@
                     <span class="sub-title">countries</span>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- --x-- counter --x-- -->
 
     </section>
     <!-- --x-- home section --x-- -->
+
+    <!-- ----- about section ----- -->
+    <section class="about">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="title">
+                        swift generation cargo & travel
+                    </h2>
+                    <p class="sub-title">
+                        to become the best, most dependable, and most effective shipping firm in Ghana and all of West
+                        Africa by creating a
+                        talented organization that is motivated by client success.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid d-flex align-items-center justify-content-center">
+            <div class="row">
+                <div class="col-lg-4 service-box">
+                    <div class="service-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <h5 class="title">
+                        <span>Dubai to Ghana</span>
+                        <br>
+                        Shipment
+                    </h5>
+                    <p class="sub-title">
+                        We use secure and dependable channels to ship any legal items from Dubai to Ghana.
+                    </p>
+                </div>
+                <div class="col-lg-4 service-box">
+                    <div class="service-icon">
+                        <i class="fa-solid fa-plane-up"></i>
+                    </div>
+                    <h5 class="title">
+                        <span>China to Ghana</span>
+                        <br>
+                        Shipment
+                    </h5>
+                    <p class="sub-title">
+                        The safest, quickest, and most dependable shipping services from China to Ghana
+                    </p>
+                </div>
+                <div class="col-lg-4 service-box">
+                    <div class="service-icon">
+                        <i class="fa-solid fa-box"></i>
+                    </div>
+                    <h5 class="title">
+                        <span>Full Container</span>
+                        <br>
+                        Loading
+                    </h5>
+                    <p class="sub-title">
+                        Take advantage of our complete container loading service at a low cost
+                    </p>
+                </div>
+                <div class="col-lg-4 service-box">
+                    <div class="service-icon">
+                        <i class="fa-solid fa-boxes-stacked"></i>
+                    </div>
+                    <h5 class="title">
+                        <span>Groupage Container</span>
+                        <br>
+                        Loading
+                    </h5>
+                    <p class="sub-title">
+                        Shipping smaller items, many users can share a container. Very cost effective
+                    </p>
+                </div>
+            </div>
+        </div>
+        <section class="contact">
+            <div class="container-fluid contact-bg">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="card" style="width: 25rem;">
+                            <img src="./img/gl/gl-11.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="title">
+                                    <span>Swift Generation Cargo</span>
+                                </h5>
+                                <a href="https://api.whatsapp.com/send?phone=233599129818" class="contact-info">
+                                    <i class="fa-brands fa-whatsapp"></i> Chat With Us
+                                </a>
+                                <a href="tel:233-59-912-9818" class="contact-info">
+                                    <i class="fa-solid fa-phone"></i> (233)599129818
+                                </a>
+                                <a href="tel:233-59-913-3765" class="contact-info">
+                                    <i class="fa-solid fa-mobile-screen-button"></i> (233)599133765
+                                </a>
+                                <a href="mailto:sgcgh246@gmail.com" class="contact-info">
+                                    <i class="fa-solid fa-envelope"></i> sgcgh246@gmail.com
+                                </a>
+                                <a href="https://goo.gl/maps/KZ9bex2pCXKLdxmG7" class="contact-info">
+                                    <i class="fa-solid fa-map-location-dot"></i> Cow lane – Opera Square
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <!-- --X-- about section --x-- -->
 
     <!-- ----------xxxxxxxxxx----------xxxxxxxxxx page script xxxxxxxxxx----------xxxxxxxxxx---------- -->
 
