--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- -x- carousel -x- -->
 
         <!-- ----- counter ----- -->
-        <!-- <div class="container-fluid">
+        <div class="container-fluid">
             <div class="row counter-row">
                 <div class="col-md-3 counter">
                     <i class="fa-solid fa-users"></i>
@@ -208,7 +208,7 @@
                     <span class="sub-title">countries</span>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- --x-- counter --x-- -->
 
     </section>
