--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section class="home">
 
         <!-- --- carousel --- -->
-        <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="3000">
                     <div class="container-fluid">
