windows reload bug fix

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     <!-- --x-- owlcarousel script --x-- -->
 
     <!-- ----- custom script ----- -->
-    <!-- <script src="./js/custom.js"></script> -->
+    <script src="./js/custom.js"></script>
     <!-- --x-- custom script --x-- -->
 
     <!-- ----- inline script ----- -->
